apps/zilean/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zilean
spec:
  selector:
    matchLabels:
      app: zilean
  template:
    metadata:
      labels:
        app: zilean
    spec:
      containers:
        - name: zilean
          image: ipromknight/zilean
          ports:
            - containerPort: 8181
