apps/zilean/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zilean
  namespace: media
  labels:
    app: zilean
spec:
  selector:
    app: zilean
  ports:
    - port: 8181
      targetPort: 8181
      name: http
    - port: 5432
      targetPort: 5432
      name: postgres
